@@ -414,7 +414,8 @@
 261,1000,0,0,600000,0
 //-- MO_ABSORBSPIRITS
 262,2000,0,0,0,0
-
+//-- MO_TRIPLEATTACK
+263,0,1000,0,0,0
 //-- MO_INVESTIGATE
 266,1000,500,0,0,0
 //-- MO_FINGEROFFENSIVE
@@ -427,8 +428,11 @@
 270,0,0,0,180000,0
 //-- MO_EXTREMITYFIST
 271,4000:3500:3000:2500:2000,3000:2500:2000:1500:1000,0,0,300000
+//-- MO_CHAINCOMBO
+272,0,1000,0,0,0
+//-- MO_COMBOFINISH
+273,0,700,0,0,0
 //==========================================
-
 
 //===== Sage ===============================
 //-- SA_MAGICROD
@@ -595,7 +599,7 @@
 //-- CH_PALMSTRIKE
 370,0,300,0,0,0
 //-- CH_TIGERFIST
-371,0,0,0,0,2000:4000:6000:8000:10000
+371,0,700,0,0,2000:4000:6000:8000:10000
 //-- CH_CHAINCRUSH
 372,0,800:800:800:800:800:1000:1000:1000:1000:1000,0,0,0
 //==========================================
