@@ -8,10 +8,14 @@
 // Delay: With 0, dex affects the skill's delay rate
 // Example - 46,1,1 = Double Strafe's casting time and delay is not affected by dex.
 // By default, dex NEVER affects after-cast delay, so no need of putting 'x,0,1' in this file
-
+263,0,2 //MO_TRIPLEATTACK
+272,0,2 //MO_CHAINCOMBO
+273,0,2 //MO_COMBOFINISH
 336,1	//WE_CALLPARTNER
 366,1	//HW_MAGICPOWER
 370,1	//CH_PALMSTRIKE
+371,0,2 //CH_TIGERFIST
+372,0,2 //CH_CHAINCRUSH
 403,3	//PF_MEMORIZE
 408,1	//WE_BABY
 409,1	//WE_CALLPARENT
